Added endpoint for update tenant certificates (minio/console) (#258)
